Fix color contrast on button

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 iframe{
     display: none;
 }
+/*
+button[kind="primary"] {
+   border: 1px solid;
+   border-color: rgba(18, 52, 86, 0.2);
+  }*/
